--- a/build.gradle
+++ b/build.gradle
@@ -16,9 +16,10 @@
 
 
 plugins {
-    id 'com.gradle.plugin-publish' version '0.9.7'
     id 'nebula.plugin-plugin' version '5.6.0'
 }
+
+apply plugin: 'groovy'
 
 description 'Release opinions on top of gradle-git'
 
@@ -33,18 +34,5 @@ contacts {
 
 dependencies {
     compile 'com.netflix.nebula:nebula-core:4.0.0'
-    compile 'com.netflix.nebula:nebula-bintray-plugin:latest.release', optional
-    compile 'com.jfrog.bintray.gradle:gradle-bintray-plugin:latest.release', optional
     compile 'org.ajoberstar:gradle-git:1.4.+'
-}
-
-pluginBundle {
-    plugins {
-        nebulaRelease {
-            id = 'nebula.release'
-            displayName = 'Nebula Release plugin'
-            description = project.description
-            tags = ['nebula', 'release', 'versioning']
-        }
-    }
 }
